force-app/main/default/objects/OrderDiscount__c/OrderDiscount__c.object-meta.xml
<CustomObject>
    <label>OrderDiscount</label>
    <nameField>
        <label>Order Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderDiscounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>