force-app/main/default/objects/OrderDiscount__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>OrderDiscounts</relationshipLabel>
    <relationshipName>OrderDiscounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>