force-app/main/default/objects/OrderDiscount__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>A discount value specific for the order. If multiple discounts in an order hit discount limit this value might be 0.</description>
    <label>Discount Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>